[tool.poetry]
name = "leetcode_solutions"
version = "0.1.0"
description = ""
authors = ["Eric Fulmer <2952996+EFulmer@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^9.0.0"
pandas = "^1.4.2"
numpy = "^1.22.3"
ipdb = "^0.13.9"
rich = "^13.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
